samples/_failures_safe/1761094562_bbb963_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_360febc5.c: In function ‘main’:
./samples/SAFE/__tmp_360febc5.c:168:9: error: expected declaration or statement at end of input
  168 |         if (fgets(buffer, sizeof(buffer), stdin) == NULL) {
      |         ^~
./samples/SAFE/__tmp_360febc5.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_360febc5.c:168:9: error: expected declaration or statement at end of input
